syntax = "proto3";

package connect;

option go_package = "github.com/vbalain/go-tpm-tools/mytools/communication/proto/connect";

// Interface exported by the server.
service Connect {
  rpc GetPSK(PskRequest) returns (PskResponse) {}
}

message PskRequest {
}

message PskResponse {
  optional string key = 1;
  optional bool success = 2;
}